0.15.2/_sources/_autosummary/baybe.transformations.composite.ChainedTransformation.rst.txt
ChainedTransformation
=====================

.. currentmodule:: baybe.transformations.composite

.. autoclass:: ChainedTransformation
   :members:                              
   :special-members: __call__
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~ChainedTransformation.__init__
   
      ~ChainedTransformation.__call__
   
      ~ChainedTransformation.abs
   
      ~ChainedTransformation.chain
   
      ~ChainedTransformation.clamp
   
      ~ChainedTransformation.from_dict
   
      ~ChainedTransformation.from_json
   
      ~ChainedTransformation.get_codomain
   
      ~ChainedTransformation.get_image
   
      ~ChainedTransformation.hold_output_left_from
   
      ~ChainedTransformation.hold_output_outside
   
      ~ChainedTransformation.hold_output_right_from
   
      ~ChainedTransformation.hshift
   
      ~ChainedTransformation.negate
   
      ~ChainedTransformation.to_botorch_objective
   
      ~ChainedTransformation.to_dict
   
      ~ChainedTransformation.to_json
   
      ~ChainedTransformation.vshift
   
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~ChainedTransformation.transformations
   
   